--- a/app/assets/stylesheets/partials/_cc-theme-template.scss
+++ b/app/assets/stylesheets/partials/_cc-theme-template.scss
@@ -22,6 +22,7 @@
   .sequence-page{
     .profile-u-name{
       color: $theme-color-a;
+      white-space: nowrap;
     }
     .profile-dropdown{
       background-color:transparent
